--- a/AG.tex
+++ b/AG.tex
@@ -10,7 +10,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{tikz-cd}
-
+\usepackage{longtable}
 
 
 \newcommand{\ca}[1]{\mathcal{#1}}
@@ -36,6 +36,11 @@ for errors or questions email: nicolatr@student.ethz.ch
 Fix a scheme X
 \\
 
+
+
+
+
+
 \begin{tabular}{p{4cm} p{11cm}}
 
 
@@ -51,29 +56,37 @@ A homomorphism of such is a morphism of presheaves $\mathcal{F}\rightarrow\mathc
 analogously define composition, identity morphism etc. $\leadsto$ this forms a category.
 \\
 
-Take \oxmod s  $\ca{F}_i$ for $i \in I$
+Take \oxmod  $\ca{F}_i$ for $i \in I$
 \\
-
-\begin{tabular}{p{4cm} p{12cm}}
+\begin{longtable}{p{.30\textwidth}  p{.70\textwidth} } 
+%\begin{tabular}{p{4cm} p{12cm}}
 
 
 direct product: & The direct product $\prod \ca{F}_i$ is defined by $U\longmapsto \prod(\ca{F}_i(U))$ with component-wise structure
 \\
 
+&\\
+
 direct sum: & the direct sum $\bigoplus \ca{F}_i$ is the sheafification the presheaf $U\longmapsto \bigoplus \ca{F}_i(U)$. This is a subsheaf of $\prod\ca{F}_i$ with equality if $|I|$ is finite.
 \\
+
+&\\
 
 tensor product: &The tensor product $\ca{F}\otimes\ca{G}$ of \oxmods $\ca{F}$ \& $\cag$ is the sheafification of the presheaf $U\longmapsto \caf(U)\otimes_{O(U)}\cag(U)$
 \\
 
+&\\
+
 inner Hom: & The inner Hom is the sheaf of homomorphisms of \oxmods $\caf$ and $\cag$
 
 $U\longmapsto Hom_{O_X}(\caf|_U , \cag|_U) =: \ca{H}om_{\ca{O}(X)}(\caf , \cag)(U)$
+\\
+
+%\end{tabular}
+\end{longtable}
 
 
-\end{tabular}
-
-\subsection{Locally free \oxmod s}
+\subsection{Locally free \oxmods}
 
 \begin{tabbing}
   Abbreviate:     \= $\ox^{(I)} := \bigoplus_{i \in I} \ox $\\
@@ -86,10 +99,12 @@ $U\longmapsto Hom_{O_X}(\caf|_U , \cag|_U) =: \ca{H}om_{\ca{O}(X)}(\caf , \cag)(
 
 free \oxmod: & An \oxmod   isomorphic to $\ox^{(I)}$ for some I is called free\\
 
+&\\
+
 locally free \oxmod: 
 
-   &(a) \= An \oxmod is locally free if $\forall x  \exists  x\in U \subset X open $ $\exists I : \caf|_U \cong \ox^{(I)}|_U$\\
-   &(b) \> It is called locally free of rank r if $\exists I : |I| = r $   and $ \forall x \exists x \in U \subset X : \caf|_U \cong \ox^{(I)}|_U$\\
+   &(a)  An \oxmod is locally free if $\forall x  \exists  x\in U \subset X open $ $\exists I : \caf|_U \cong \ox^{(I)}|_U$\\
+   &(b)  It is called locally free of rank r if $\exists I : |I| = r $   and $ \forall x \exists x \in U \subset X : \caf|_U \cong \ox^{(I)}|_U$\\
 \\
 
 dual sheaf: & For $\caf$ locally free of finite rank, $\caf^{\vee} := \ca{H}om_{\ox}(\caf, \ox)$ is called the dual sheaf, also locally free of rank r.\\
@@ -146,8 +161,11 @@ finitely generated \oxmod : & An \oxmod $\caf$ is called: \\
   open:
   $\exists n < \infty$ $\exists \, \ox^n|_U \twoheadrightarrow \caf|_U$  \oxmod  homomorphism.
 \\
-&(b) coherent if it is finitely generated and $\forall U \subset X $ open $\forall n < \infty \, \forall$
-homomorphisms $\varphi : \ox|_U \longrightarrow \caf|_U \, ker(\varphi)$ is
+
+&\\
+
+coherent \oxmod &(b) coherent if it is finitely generated and $\forall U \subset X $ open $\forall n < \infty \, \forall$
+homomorphisms $\varphi : \ox^n|_U \twoheadrightarrow \caf|_U \, ker(\varphi)$ is
 finitely generated. \\
 \end{tabular}
 
@@ -165,9 +183,8 @@ finitely generated. \\
 Consider a morphism $f:X\longrightarrow Y$ with sheaves $\caf$ on X and $\cag$ on Y.
 
 Let $\caf$ be an \oxmod and $\cag$ be an $\ca{O}_Y$-module.
-\\
 
-f comes with a homomorphism of sheaves of rings
+$f$ comes with a homomorphism of sheaves of rings:
 
 $f^{\flat}:\oy\longrightarrow f_{\ast}\ox  \Longleftrightarrow f^{\sharp}:f^{\ast}\oy\longrightarrow \ox$\\
 
@@ -179,13 +196,15 @@ $f^{\flat}:\oy\longrightarrow f_{\ast}\ox  \Longleftrightarrow f^{\sharp}:f^{\as
 
 push-forward of a sheaf: & Make $f_{\ast}\caf$ into an \oymod by\\
 
-  
-  \begin{tikzcd}
-A \arrow[r] & B  \\
+  %make this
+ & \begin{tikzcd}
+\oy(V)\times(f_*\caf)(V) \arrow[r]\arrow[d, shift right=5ex]\arrow[d,"=", shift left=7ex] & (f_*\caf)(V) \arrow[d]  \\
+\ox(f^{-1} (V))\times \caf(f^{-1})  \arrow[r, "mult."] & \caf(f^{-1}(V))
 \end{tikzcd}
 
+\\
 
-inverse image: & the inverse image of an \oxmod is $f^{\ast}\cag:= f^{-1}\cag\otimes_{f^{-1}\oy}\ox$.  i.e.the sheafification of the presheaf \[U\longmapsto \varinjlim_{f(U)\subset V\subset Y}\]\\
+inverse image: & the inverse image of an \oxmod is $f^{\ast}\cag:= f^{-1}\cag\otimes_{f^{-1}\oy}\ox$.  i.e.the sheafification of the presheaf \[U\longmapsto \varinjlim_{f(U)\subset V\subset Y}(\ox(U)\otimes_{\oy(V)}\cag(V))\]\\
 
 scheme-theoretic support of $\caf$: & Let $\caf$ be a quasicoherent, finitely generated \oxmod. the scheme-theoretic support is the smallest closed subscheme $i:Y\hookrightarrow X $ such that $\caf \cong i_{\ast}i^{\ast}\caf$. Moreover $Y = \{x \in X | \caf_x \neq 0 \}$\\
 
@@ -233,23 +252,29 @@ very ample sheaf: &  An invertible sheaf $\ca{L}$ is called very ample (over Spe
 \subsection{Divisors}
 
 
+Assume X integral with function field K.
 
+\begin{longtable}{p{.30\textwidth}  p{.70\textwidth} } 
+%\begin{tabular}{p{4cm} p{11cm}}
+	
+field of rational functions on X & the constant sheaf $\ca(K)_X:= \underline{K}$ on X is called the sheaf of rational functions on X\\
 
+&\\
 
-\begin{tabular}{p{4cm} p{11cm}}
+	
 
   group of Cartier divisors & $Div(X) := \Gamma(X, \ca{K}_X^{\times}/\ox^{\times}) $\\
   & $ Div(X) = \{ ([f_x]) \in \prod_{x \in X} K^{\times}/\oxx^{\times} \; | \; \forall x \exists U \exists f \in K^{\times} \forall y \in U : f_y\cdot \ca{O}_{X,y}^{\times} = f\ca{O}_{X,y}^{\times} \}$ \\
   & $=  \{$ collections of $ f_i \in K^{\times}$ for all $i \in I$ and an open covering $ X=\bigcup U_i$ such that $\forall i,j : f_i / f_j \in \Gamma(U_i\cap U_j, \ox^{\times})   \} /$ modulo some equivalence relation\\
-  & convention: The group law on Div(X) is weitten additively.\\
+  & convention: The group law on Div(X) is written additively.\\
   \\
 
   \\
-\end{tabular}
+%\end{tabular}
 
-\begin{tabular}{p{4cm} p{11cm}}
+%\begin{tabular}{p{4cm} p{11cm}}
 
-  \ox(D)(U) & For any Cartier divisor $D = ([f_x]) x \in X $ and any open $U \subset X$ set:\\
+  $\ox(D)(U)$ & For any Cartier divisor $D = ([f_x]) x \in X $ and any open $U \subset X$ set:\\
   & \[
   \ox(D)(U) = \begin{cases}
     \{0\} if U= \emptyset\\
@@ -262,12 +287,12 @@ very ample sheaf: &  An invertible sheaf $\ca{L}$ is called very ample (over Spe
     locally factorial scheme & A noetherian integral scheme such that $\forall x \in X  \oxx $ is factorial is called locally factorial.\\
 
     \\
-\end{tabular}
+%\end{tabular}
 
-\begin{tabular}{p{4cm} p{11cm}}
+%\begin{tabular}{p{4cm} p{11cm}}
   effective cartier divisor & A cartier divisor $D = ([f_x])_x$ is called effective if $\forall x \in X: \; f_x \in \oxx $\\
 
-  & equiv: $\forall i : \. f_i \in \ox(u_i)$\\
+  & equiv: $\forall i :  f_i \in \ox(u_i)$\\
   &$\iff \ox(-D) \subset \ox \iff \ox \subset \ox(D)$\\
   &$\iff \ox(-D)$ is a quasicoherent sheaf of ideals of $ \ox$ \\
   & $\iff $ D corresponds to a closed subscheme locally given by  one equation $f_i$ i.e. locally principal. this subscheme determines D. \\
@@ -279,7 +304,7 @@ very ample sheaf: &  An invertible sheaf $\ca{L}$ is called very ample (over Spe
   \\
 
 
-\end{tabular}
+%\end{tabular}
 
 \\
 \newline
@@ -287,51 +312,79 @@ very ample sheaf: &  An invertible sheaf $\ca{L}$ is called very ample (over Spe
 
 
 
-\begin{tabular}{p{4cm} p{11cm}}
+%\begin{tabular}{p{4cm} p{11cm}}
 
   cartier divisor class group of X & The factor group $DivCl(X) := Div(X)/{principal divisors}$\\
 
-  \\
-\end{tabular}
+  &\\
+%\end{tabular}
 
 \\
 
 
-\begin{tabular}{p{4cm} p{11cm}}
+%\begin{tabular}{p{4cm} p{11cm}}
 
 
     prime cycle & an integral closed subscheme is called a prime cycle. (equiv: irred closed subset)\\
 
-    \\
+    &\\
 
     codimension of a prime cycle & A prime cycle's codimension is $dim \ca{O}_{X,y}$ for the generic point $y \in Y$.\\
 
-    \\
+    &\\
 
     cycle & A finite formal $\mathbb{Z}$-linear combination of prime cycles $\sum_y n_y y$ is called a cycle.\\
 
-    \\
+    &\\
 
     codimension of a cycle & If all these Y have codim d the cycle has codim d\\
 
-    \\
+    &\\
 
     Weil divisor & A cycle of dimension 1 is called a Weil divisor.\\
 
-    
+    &\\
     
   
-\end{tabular}
+%\end{tabular}
 
 
+
+%\begin{tabular}{p{4cm} p{11cm}}
+	principal weil divisor & A Weil divisor of the form $cyc(div(f)) = \sum ord_y(f)\cdot\overline{\{y\}}$ is called principal.\\
+	
+	&\\
+	
+	Weil divisor class group& The factor group $Z¹(X)/\{principal\} = Cl(X)$ is called the Weil divisor group. \\
+
+	&\\
+
+	effective weil divisor& A weil divisor $\sum n_y Y$ is effective if all $n_y \geq 0$\\
+	& equiv: associated cartier divisor is effective\\
+	& equiv: $\ox(-D)$ is an ideal sheaf of $\ox$\\
+	
+	&\\
+	
+	ample/very ample divisor & A divisor is called ample/very ample iff $\ox(D)$ is dito.\\
+	
+	&\\
+	
+		
+  %\end{tabular}
+\end{longtable}
+
+
+\subsection{Differentials}
+
+Let X=Spec B , Y=Spec A and $f:Y\longrightarrow X$ \\
 
 \begin{tabular}{p{4cm} p{11cm}}
 
 
-  \end{tabular}
-
-\begin{tabular}{p{4cm} p{11cm}}
-
+	A-derivation of B to M & An A-derivation of B to a B-module M is a map $d:B\longrightarrow M$ with $\forall b,b'\in B$ $\forall a  \in A$\\
+	&(a)$d(b+b')=d(b)+d(b')$\\
+	&(b)$d(b\cdot b')= b\cdot b' + d(b)\cdot b'$\\
+	&(c)$d(a\cdot 1_B)= 0$\\
 
   \end{tabular}
 
@@ -365,4 +418,9 @@ very ample sheaf: &  An invertible sheaf $\ca{L}$ is called very ample (over Spe
 
 
 \end{document}
+
+
+
+%to do:
+% go from tabular to longtable
 
