--- a/AG.tex
+++ b/AG.tex
@@ -17,9 +17,9 @@
 \newcommand{\caf}{\mathcal{F}}
 \newcommand{\cag}{\mathcal{G}}
 \newcommand{\oxmod}{$\mathcal{O}_X$-module }
-\newcommand{\oxmods}{$\mathcal{O}_X$-modules}
+\newcommand{\oxmods}{$\mathcal{O}_X$-modules }
 \newcommand{\oymod}{$\mathcal{O}_Y$-module }
-\newcommand{\oymods}{$\mathcal{O}_Y$-modules}
+\newcommand{\oymods}{$\mathcal{O}_Y$-modules }
 \newcommand{\ox}{\mathcal{O}_X}
 \newcommand{\oy}{\mathcal{O}_Y}
 \newcommand{\oxx}{\mathcal{O}_{X,x}}
@@ -58,7 +58,7 @@ analogously define composition, identity morphism etc. $\leadsto$ this forms a c
 
 Take \oxmod  $\ca{F}_i$ for $i \in I$
 \\
-\begin{longtable}{p{.30\textwidth}  p{.70\textwidth} } 
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} } 
 %\begin{tabular}{p{4cm} p{12cm}}
 
 
@@ -93,7 +93,6 @@ $U\longmapsto Hom_{O_X}(\caf|_U , \cag|_U) =: \ca{H}om_{\ca{O}(X)}(\caf , \cag)(
   \>$  \ox^I := \prod_{i \in I} \ox $\\
   \> $ \ox^r := \bigoplus^{r}_{i=1}\ox$
 \end{tabbing}
-\\
 
 \begin{tabular}{p{4cm} p{12cm}}
 
@@ -118,9 +117,9 @@ Picard group: & The set of isomorphism classes of invertible sheaves on X form a
 
 \end{tabular}
 
-\subsection{\oxmod s on affine schemes}
+\subsection{\oxmods on affine schemes}
 
-\subsection{Quasicoherent \oxmod s }
+\subsection{Quasicoherent \oxmods }
 
 Let X be an arbitrary scheme
 
@@ -169,7 +168,7 @@ homomorphisms $\varphi : \ox^n|_U \twoheadrightarrow \caf|_U \, ker(\varphi)$ is
 finitely generated. \\
 \end{tabular}
 
-\\
+
 %
 
 
@@ -212,7 +211,7 @@ scheme-theoretic support of $\caf$: & Let $\caf$ be a quasicoherent, finitely ge
  \end{tabular}
 \\
 
-\subsection{\oxmods on a projective scheme}
+\subsection{\oxmods  on a projective scheme}
 
 %%more explanation here
 
@@ -254,7 +253,7 @@ very ample sheaf: &  An invertible sheaf $\ca{L}$ is called very ample (over Spe
 
 Assume X integral with function field K.
 
-\begin{longtable}{p{.30\textwidth}  p{.70\textwidth} } 
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} } 
 %\begin{tabular}{p{4cm} p{11cm}}
 	
 field of rational functions on X & the constant sheaf $\ca(K)_X:= \underline{K}$ on X is called the sheaf of rational functions on X\\
@@ -385,8 +384,27 @@ Let X=Spec B , Y=Spec A and $f:Y\longrightarrow X$ \\
 	&(a)$d(b+b')=d(b)+d(b')$\\
 	&(b)$d(b\cdot b')= b\cdot b' + d(b)\cdot b'$\\
 	&(c)$d(a\cdot 1_B)= 0$\\
+	& the set of these is denoted $DER_A(B,M)$\\
+	
+	&\\
 
+$\Omega_{B/A}$ module of (relative) differential (form)s & A module of relative differential forms of B over A is a B-module $\Omega_{B/A}$ with a derivation $d:B \longrightarrow \Omega_{B/A}$ over $A$ which satisfies the universal property: for all B-modules M and all derivations $\delta : B \longrightarrow M$ over A there exists exactly one B-module homomorphism $f: \Omega_{B/A} \longrightarrow M $ with $f \circ d = \delta $ \\
+
+&\\
   \end{tabular}
+
+
+Consider a morphism $f:Y \longrightarrow X$. then for all open affine subsets we have:
+
+
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} } 
+
+
+
+
+\end{longtable}
+
+
 
 \begin{tabular}{p{4cm} p{11cm}}
 
