--- a/AG2.tex
+++ b/AG2.tex
@@ -542,21 +542,29 @@ Let $\caf$ be a sheaf of abelian groups of a topological space $X$. Take an open
 
   &\\
 
-  
+  refinement of open covering & For $\cau := (U_i)_{i \in I}$ and $\ca{V} := (V_j)_{j \in J}$ we say $\ca{V}$ is a refinement if there exists a map $\sigma : I \longrightarrow J $ such that $\forall j \in J : V_j \subset U_{\sigma j}$
+
+&\\  
   
 \end{longtable}
 
+This defines a homo of complexes $\sigma^*: C^{\bullet}(\cau, \caf) \longrightarrow C^{\bullet}(\ca{V})$. Hence a natural homo $H^n(\sigma) : H^n(\cau , \caf) \longrightarrow H^n( \ca{V} , \caf)$.\\
 
+Let $\ca{C}$ be the category whose objects are all open coverings and $Mor_{\ca{C}}(\cau, \ca{V}) := \{ \sigma as above\}$. Restrict to $\cau = (U_i)_{i \in I}$ for all $U_i$ distinct $\Longrightarrow$ small cofinal subcategory.\\
+
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
+
+  $H^n(X,\caf)$ the n-th cech cohomology of $\caf$ & $H^n(X, \caf ) := \varinjlim\limits_{\cau} H^n(\cau , \caf)$ is called the n-th cech cohomology.\\
+
+
+  &\\
+
+  
 
 \begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
 
 
 \end{longtable}
-
-
-
-
-
 
 
 
