done til beginning of 6.4

--- a/AG2.tex
+++ b/AG2.tex
@@ -558,12 +558,30 @@ Let $\ca{C}$ be the category whose objects are all open coverings and $Mor_{\ca{
 
 
   &\\
+\end{longtable}
 
   
 
+
+  \subsection{Cohomology of projective space}
+
+  \subsection{Higher direct images}
+
+  Take $f:X \rightarrow Y$ sheaves of modules $\caf$ on $X$ and $\cag$ on $Y$
+  We have a natural homo: $H^p(Y,f_* \caf) \rightarrow H^p(X, \caf)$ and $H^p(Y, \cag) \rightarrow H^p(X, f^* \cag)$
+  \\
+
+  Special case: $U \subset X$ open $\squigarrow$ natural "restriction map" $H^p(X, \caf)\longrightarrow H^p(U, \caf |_U)$.\\
+
+  Special case: For all open $V' \subset V \subset Y$ the restriction map  for $f^{-1}(V') \subset f^{-1}(V)$ makes this into a presheaf of \oymods on $Y$.\\
+
+  
+  
 \begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
 
+  $R^pf_*\caf$ the p-th higher direct image of $\caf $ & The associated sheaf to the sheaf above is called the p-th higher direct image (sheaf) of $\caf$ with respect to $f$ \\
 
+  &\\
 \end{longtable}
 
 
