--- a/AG2.tex
+++ b/AG2.tex
@@ -734,16 +734,105 @@ be the resulting homo of sheaves. Take its adjoint.
 
 \subsection{Divisors on curves}
 
-\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
-
-  
-\end{longtable}
+Let $X$ be regular integral projective scheme of dimension 1 over a field $k$ ( $\Rightarrow$ curve)\\
 
 
 \begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
 
+degree of a Weil divisor & For $D= \sum_{P \in |X|} n_P \cdot \bar{P}$ is $deg_k(D):= \sum_P n_P \cdot [k(P)/k] \in \mathbb{Z}$\\
+
+&\\
+
+\end{longtable}
+
+
+
+\subsection{Riemann-Roch}
+
+
+
+Let $X$ be projective over a field $k$. Let $\caf$ be a coherent sheaf on $X$.\\
+§6.3 $\Rightarrow$ $\forall : H^p(X ,\caf )$ is a fin dim $k$-Vector space, zero for $p \notin [0, dimX]$\\
+Abbreviate: $h^p(X, \caf ) := dim_k H^p(X, \caf)$\\
+
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
+
+$\chi(X , \caf ) $ Euler characteristic of $\caf$ & $\chi(X,\caf) := \sum_{p \in \mathbb{Z}} (-1)^p h^p(X, \caf )$\\
+
+&\\
+
+$deg(\ca{L})$ & $deg(\ca{L}):= deg(D)$ for any $D$ with $\ca{L} \cong \ox(D)$\\
+& $dim(X)=1\Rightarrow \chi(X, \caf) = h^0(X,\caf) - h^1(X, \caf)$\\
+
+&\\
+
+genus of a curve & $g:= h^1(X, \ox) \in \mathbb{Z}$ is called the genus of $X$,  so $\chi(X, \ox)= 1 - g$\\
+
+&\\
   
 \end{longtable}
+
+
+\subsection{Residues}
+
+$k$ any field, $t$ variable $F:=k((t))=k[[t]][t^{-1}]$ for $k[[t]] = \varprojlim_{n} k[t]/(t^n)$.\\
+
+Set $\hat{\Omega_{F/k}} = (\varprojlim_{n} \Omega_{k[t]/(t^n)/k})[t^{-1}] \cong F\cdot dt$\\
+
+
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
+	residue & For any $\omega = \sum_{i \geq -n} a_i t^i \cdot dt$ we set $res_t\omega := a_{-1}$\\
+	& $\rightsquigarrow$ $k$-linear $res_t : \Omega_{F/k} \longrightarrow k$\\
+	
+	&\\
+	
+	%
+	%
+	%
+	%
+	%
+	%skipped some shit here
+	%
+	%
+	%
+	%
+	%
+	
+\end{longtable}
+
+
+\subsection{Serre duality}
+
+\subsection{Some consequences of Riemann-Roch}
+
+\subsection{Embeddings in projective space}
+
+
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
+	
+	hyperelliptic & $X$ is called hyperelliptic if $g \geq 1$ and it posesses a separated morph $f:X \longrightarrow \mathbb{P}^1_k $ of degree 2
+\end{longtable}
+
+
+
+\subsection{Hyperelliptic curves}
+
+\subsection{Coverings}
+
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
+	
+	
+\end{longtable}
+
+
+
+
+\begin{longtable}{p{.25\textwidth}  p{.75\textwidth} }
+	
+	
+\end{longtable}
+
+
 
 \end{document}
 
